--- a/src/app/feature/beautier/components/beautiers-list/beautiers-list.component.html
+++ b/src/app/feature/beautier/components/beautiers-list/beautiers-list.component.html
@@ -12,7 +12,7 @@
           <img src="{{beautier.photo_url}}">
         </ion-avatar>
         <ion-label>
-          <h2>{{ beautier.auth_user.first_name }} {{ beautier.auth_user.last_name }} <br> <small> {{beautier.title}}</small></h2>
+          <h2>{{beautier.preferred_name}} <br> <small> {{beautier.title}}</small></h2>
           <p>{{beautier.bio}}</p>
         </ion-label>
       </ion-item>
