added new gallery slide

--- a/src/app/feature/gallery/gallery.component.html
+++ b/src/app/feature/gallery/gallery.component.html
@@ -4,25 +4,90 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <!-- <h3>Andrómeda Sánchez </h3> -->
   <ion-slides pager="true" [options]="slideOpts">   
     <ion-slide *ngFor="let img of images">
       <img src="{{img}}" tappable (click)="openPreview(img)"/>
       <!-- <h4 class="centered"  [innerHTML]="img"></h4> -->
     </ion-slide>
   </ion-slides>
-
+  <!-- <hr> -->
   <!-- ./../../../assets/images/gallery/g{{img}}.jpeg -->
-
+  <!-- <h3>Frida Contreras </h3> -->
   <ion-slides pager="true" [options]="slideOpts">   
     <ion-slide *ngFor="let img of images2">
       <img src="{{img}}" tappable (click)="openPreview(img)"/>
     </ion-slide>
   </ion-slides>
-
+  <!-- <hr>
+<h3>Michel Ingelmo</h3> -->
   <ion-slides pager="true" [options]="slideOpts">   
     <ion-slide *ngFor="let img of images3">
       <img src="{{img}}" tappable (click)="openPreview(img)"/>
     </ion-slide>
   </ion-slides>
+
+  <!-- <hr>
+  <h3>Danny Michel</h3> -->
+<!-- 4-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images4">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+<!-- <hr>
+  <h3>Danny Michel</h3> -->
+<!-- 5-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images5">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+<!-- <hr>
+  <h3>Stephani Esparza</h3> -->
+<!-- 6-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images6">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+<!-- <hr>
+  <h3>Viana Hernandez</h3> -->
+<!-- 7-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images7">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+<!-- <hr>
+  <h3>Viana Hernandez</h3> -->
+<!-- 8-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images8">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+
+<!-- 9-->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images9">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+
+
+<!-- 10 -->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images10">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+<!-- 11 -->
+<ion-slides pager="true" [options]="slideOpts">   
+  <ion-slide *ngFor="let img of images11">
+    <img src="{{img}}" tappable (click)="openPreview(img)"/>
+  </ion-slide>
+</ion-slides>
+
   <div style="height:50px;"></div>
 </ion-content>
