--- a/src/app/feature/shopping-cart/components/payment/payment.component.html
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.html
@@ -73,7 +73,7 @@
                 data-conekta="card[exp_year]">
               </ion-datetime>
             </ion-col>
-      
+
           </ion-row>
           <ion-row>
             <ion-col size="6">
@@ -90,7 +90,7 @@
             </ion-col>
             <ion-col size="6">
               <ion-input
-                placeholder="Appellido"
+                placeholder="Apellido"
                 formControlName="last_name">
               </ion-input>
               <span
@@ -172,15 +172,15 @@
                 formControlName="phone"
               ></ion-intl-tel-input>
             </ion-col>
-          </ion-row> 
+          </ion-row>
         </ion-grid>
       </form>
       <!-- [disabled]="!(ccForm.touched && ccForm.valid)"  -->
-      <ion-button      
+      <ion-button
         expand="block"
         (click)="submitPayment()"
-        [disabled]="!(ccForm.touched && ccForm.valid)" 
-        *ngIf="loadingFlag ">Emitir Pago</ion-button>       
+        [disabled]="!(ccForm.touched && ccForm.valid)"
+        *ngIf="loadingFlag ">Emitir Pago</ion-button>
         <div *ngIf="!loadingFlag "><strong>Estamos procesando su pago. </strong></div>
     </ion-card-content>
   </ion-card>
