--- a/src/app/feature/shopping-cart/components/payment/payment.component.scss
+++ b/src/app/feature/shopping-cart/components/payment/payment.component.scss
@@ -7,4 +7,11 @@ ion-spinner {
   width: 10em;
   height: 10em;
 }
+.error {
+  color: red;
+}
+.loaderContainer {
+  color:#e4c683;
+  text-align: center;
+}
 }
