loading style color

--- a/src/app/home/components/home-page/home.page.component.html
+++ b/src/app/home/components/home-page/home.page.component.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
 
   <div *ngIf="loadingFlag" class="loaderContainer">
-    <ion-spinner name="crescent" style="margin-top: 50%;" color="tertiary"></ion-spinner>
+    <ion-spinner name="crescent" style="margin-top: 50%;"  color="#e4c683" ></ion-spinner>
   </div>
 
   <div [ngStyle]="{display: loadingFlag ? 'none': 'block'}">
